tests/paczka1/fuzzy1/11855450.err
Error in line 9: QMeluQNm A723 99,0
Error in line 13: K5XVM S239 58,0
Error in line 6: dyxAo S954 31,4
Error in line 26: kJMAEdiVKn S954 99,1
